# gentrification-project

./: .gitignore  README.md  algorithm_template.py  eda.ipynb  eda2.ipynb  eda2.py  gentrification.py  index.html  pyproject.toml
data/: 001_13mu_2022_20230929-105546.csv  003_12f1_2021_20230929-100110.csv  ASHTUAT1.csv  PKS_postinumeroalueet_2023_shp.json  README.md  convert_postal_code_data.py  gentrification.json  taxable_income_per_person_in_national_taxes.csv
doc/: REPORT.md
eda/: eda.ipynb  eda2.ipynb
html/demo/: gentrification.json  index.html
html/pitch/: index.html  second.html
pitch/: index.html  pitch.css  second.html
scripts/: README.md  score.py
