[tool.poetry]
name = "gentrification-project"
version = "0.1.0"
description = "DATA11001 Mini Project: Gentrification in Helsinki"
authors = [
  "Michaela Söderholm <no.spam.under.any.circumstances@thank.you>",
  "Sami Laine <no.spam.under.any.circumstances@thank.you>",
  "Samu Syrjänen <no.spam.under.any.circumstances@thank.you>"
]
license = "Creative Commons BY 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
